--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.7.2",
+    "embla-carousel-react": "^8.1.3",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
@@ -17,6 +18,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11",
     "styled-reset": "^4.5.2",
     "web-vitals": "^2.1.0"
