--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.2",
     "embla-carousel-react": "^8.1.3",
     "gsap": "^3.12.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
